# chemlambda-hask

./: .gitignore  Atom.hs  ChangeLog.md  Graph.hs  LICENSE  Moves.hs  Node.hs  Pattern.hs  Port.hs  README.md  SymbolicAtom.hs  TestData.hs  Testing.hs  View.hs  chemlambda-hask.cabal  chemlambda.cabal  stack.yaml
Chemlambda/: Chemistry  Core  Experimental  Graph.hs  Language  Moves.hs  Node.hs  Patterns.hs  Pretty.hs  SampleData  Selectors.hs
Util/: Graph.hs  Matching.hs  Pattern.hs
bench/: Main.hs
chemlambda-chemistry/: ChangeLog.md  LICENSE  chemlambda-chemistry.cabal
chemlambda-core/: README.md  chemlambda-core.cabal
chemlambda-core/Chemlambda/Core/: AdjList.hs  Atom.hs  Connectable.hs  Connection.hs  Graph.hs  Node.hs  Pattern.hs  Port.hs  Reaction.hs
chemlambda-core/src/Chemlambda/: Pretty.hs
chemlambda-core/src/Chemlambda/Core/: Atom.hs  Connectable.hs  Graph.hs
chemlambda-core/src/Chemlambda/Experimental/: Graph.hs  Reaction.hs
chemlambda-core/src/Chemlambda/Standard/: Enzymes.hs
chemlambda-core/test/: Main.hs
chemlambda-experimental/: ChangeLog.md  chemlambda-experimental.cabal
chemlambda-language/: ChangeLog.md  chemlambda-language.cabal
chemlambda-molparser/: ChangeLog.md  chemlambda-molparser.cabal
chemlambda-sampledata/: ChangeLog.md  chemlambda-sampledata.cabal
molfiles/: ackerman_2_2.mol  skk.mol  y.mol
src/: Atom.hs  Connectable.hs  Graph.hs  GraphMod.hs  GraphModification.hs  Moves.hs  Node.hs  Pattern.hs  Port.hs  Pretty.hs  Reaction.hs  Reduction.hs  RewriteAlgorithms.hs  Testing  Testing.hs
test/: Main  Main.hs  (+2 more)
(+32 files in other folders)
