name:                chemlambda-core
version:             0.1.0
synopsis:            An implementation of the artificial chemistry Chemlambda in haskell
description:         The core components of the Chemlambda project
homepage:            https://github.com/synergistics
license:             BSD3
license-file:        LICENSE
author:              synergistics
maintainer:          kingjak678@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10


library
  default-language: Haskell2010

  exposed-modules:
    -- Chemlambda.Core.Node,
    -- Chemlambda.Core.Pattern,
    Chemlambda.Core.Graph,
    -- Chemlambda.Core.Port,
    Chemlambda.Core.Atom
    -- Chemlambda.Core.Connectable
    
  build-depends:
    base >=4.9 && <4.10,
    containers >=0.5 && <0.6,
    vector
    -- , parallel


test-suite test
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0

  build-depends:
    base, 
    pretty-show,
    hspec,
    chemlambda-core


  ghc-options:
    -O2
    -threaded
    -fprof-auto


-- benchmark bench
--  default-language: Haskell2010
--  hs-source-dirs: bench
--  main-is: .hs
--  build-depends: base, chemlambda, criterion, parallel
--  type: exitcode-stdio-1.0

